--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 小星星也变奏
-SEOTitle: 小星星也变奏
+SEOTitle: 小星星也变奏 | DHR blog
 header-img: img/home-bg.jpg
 email: 15910690996@163.com
 description: "这里是小星星也变奏的个人博客，与你一起发现更大的世界"
